--- a/SensorReader/src/main/AndroidManifest.xml
+++ b/SensorReader/src/main/AndroidManifest.xml
@@ -6,19 +6,18 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />﻿
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="info.billebeling.usensor.sensorreader.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".SensorWrangler" />
     </application>
 
 </manifest>
